Fixed padding on small screen for search btn

--- a/assets/stylesheets/partials/homepage/_search.scss
+++ b/assets/stylesheets/partials/homepage/_search.scss
@@ -59,7 +59,7 @@
 @media only screen and (max-width: 400px) {
   .search {
     button {
-      padding: 10.5px 5px;
+      padding: 8px 5px;
       height: auto;
     }
 
